--- a/pat/.vscode/settings.json
+++ b/pat/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "python.pythonPath": "/usr/local/bin/python3"
+    "python.pythonPath": "/usr/local/bin/python3",
+    "files.associations": {
+        "string": "cpp",
+        "iostream": "cpp",
+        "vector": "cpp",
+        "queue": "cpp"
+    }
 }
