--- a/pat/.vscode/settings.json
+++ b/pat/.vscode/settings.json
@@ -4,6 +4,14 @@
         "string": "cpp",
         "iostream": "cpp",
         "vector": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "array": "cpp",
+        "bitset": "cpp",
+        "string_view": "cpp",
+        "initializer_list": "cpp",
+        "regex": "cpp",
+        "utility": "cpp",
+        "valarray": "cpp",
+        "ostream": "cpp"
     }
 }
