--- a/pat/.vscode/settings.json
+++ b/pat/.vscode/settings.json
@@ -12,6 +12,12 @@
         "regex": "cpp",
         "utility": "cpp",
         "valarray": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "deque": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "random": "cpp"
     }
 }
