--- a/pat/.vscode/settings.json
+++ b/pat/.vscode/settings.json
@@ -18,6 +18,8 @@
         "list": "cpp",
         "unordered_map": "cpp",
         "unordered_set": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "set": "cpp",
+        "iomanip": "cpp"
     }
 }
