--- a/uva/.vscode/settings.json
+++ b/uva/.vscode/settings.json
@@ -5,8 +5,6 @@
         "random": "cpp",
         "ios": "cpp",
         "ostream": "cpp",
-        "iostream": "cpp",
-        "string": "cpp",
-        "vector": "cpp"
+        "iostream": "cpp"
     }
 }
