--- a/csp/.vscode/settings.json
+++ b/csp/.vscode/settings.json
@@ -10,6 +10,7 @@
         "complex": "cpp",
         "iosfwd": "cpp",
         "iomanip": "cpp",
-        "deque": "cpp"
+        "deque": "cpp",
+        "iostream": "cpp"
     }
 }
