--- a/DS/.vscode/launch.json
+++ b/DS/.vscode/launch.json
@@ -4,21 +4,11 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
-        {
-            "name": "Python: 当前文件",
-            "type": "python",
-            "request": "launch",
-            // "program": "${workspaceFolder}/bit/15_online_round/${file}",
-            "program": "${file}",
-            "console": "integratedTerminal"
-        },
         {
             "name": "(lldb) 启动",
             "type": "cppdbg",
             "request": "launch",
-            // "program": "${workspaceFolder}/${fileBasenameNoExtension}",
-            "program": "${workspaceFolder}/bit/15_online_round/${fileBasenameNoExtension}",
+            "program": "${workspaceFolder}/${fileBasenameNoExtension}",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
