--- a/lanqiao/.vscode/launch.json
+++ b/lanqiao/.vscode/launch.json
@@ -14,7 +14,7 @@
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
-            "MIMode": "gdb"
+            "MIMode": "lldb"
         }
     ]
 }
