--- a/pat/.vscode/settings.json
+++ b/pat/.vscode/settings.json
@@ -1,34 +1,22 @@
 {
-    "python.pythonPath": "/usr/local/bin/python3",
     "files.associations": {
-        "string": "cpp",
+        "list": "cpp",
+        "algorithm": "cpp",
+        "random": "cpp",
+        "ios": "cpp",
+        "ostream": "cpp",
         "iostream": "cpp",
         "vector": "cpp",
+        "iosfwd": "cpp",
+        "iterator": "cpp",
         "queue": "cpp",
-        "array": "cpp",
-        "bitset": "cpp",
-        "string_view": "cpp",
-        "initializer_list": "cpp",
-        "regex": "cpp",
+        "iomanip": "cpp",
+        "stack": "cpp",
         "utility": "cpp",
-        "valarray": "cpp",
-        "ostream": "cpp",
+        "__split_buffer": "cpp",
         "deque": "cpp",
-        "forward_list": "cpp",
-        "list": "cpp",
-        "unordered_map": "cpp",
-        "unordered_set": "cpp",
-        "random": "cpp",
-        "cmath": "cpp",
-        "cctype": "cpp",
-<<<<<<< HEAD
-        "*.tcc": "cpp",
-        "optional": "cpp",
-        "system_error": "cpp",
-        "iomanip": "cpp"
-=======
-        "ios": "cpp",
-        "map": "cpp"
->>>>>>> d0ab16ce6d35d936eac1c47860e606254640ef2b
+        "string": "cpp",
+        "cstdlib": "cpp",
+        "set": "cpp"
     }
 }
