--- a/uva/.vscode/settings.json
+++ b/uva/.vscode/settings.json
@@ -9,6 +9,9 @@
         "vector": "cpp",
         "iosfwd": "cpp",
         "iterator": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "iomanip": "cpp",
+        "stack": "cpp",
+        "utility": "cpp"
     }
 }
