--- a/uva/.vscode/launch.json
+++ b/uva/.vscode/launch.json
@@ -14,8 +14,9 @@
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
-            // "MIMode": "gdb"
-            "MIMode": "lldb"
+            "MIMode": "gdb"
+            // "MIMode": "lldb",
+            // "miDebuggerPath": "/usr/bin/lldb-mi"
         }
     ]
 }
