--- a/csp/201312_5.dSYM/Contents/Info.plist
+++ b/csp/201312_5.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.2020a3</string>
+		<string>com.apple.xcode.dsym.201312_5</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
