--- a/acwing/.vscode/settings.json
+++ b/acwing/.vscode/settings.json
@@ -86,6 +86,7 @@
         "typeinfo": "cpp",
         "unordered_map": "cpp",
         "unordered_set": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "*.tcc": "cpp"
     }
 }
