--- a/acwing/.vscode/settings.json
+++ b/acwing/.vscode/settings.json
@@ -87,6 +87,7 @@
         "unordered_map": "cpp",
         "unordered_set": "cpp",
         "valarray": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "filesystem": "cpp"
     }
 }
