--- a/acwing/.vscode/tasks.json
+++ b/acwing/.vscode/tasks.json
@@ -3,12 +3,12 @@
 	"tasks": [
 		{
 			"type": "cppbuild",
-			"label": "acm clang++ clang and lldb flags",
+			"label": "g++ build active file",
 			"command": "/usr/bin/clang++",
 			// "command": "/usr/bin/g++",
 			"args": [
 				"-std=c++17",
-				"-fstandalone-debug",
+				// "-fstandalone-debug",
 				"-DDEBUG",
 				"-DLOCAL",
 				// "-glldb",
@@ -28,7 +28,7 @@
 				"kind": "build",
 				"isDefault": true
 			},
-			"detail": "compiler: /usr/bin/clang++"
+			// "detail": "compiler: /usr/bin/clang++"
 
 		},
 		{
