--- a/acwing/.vscode/launch.json
+++ b/acwing/.vscode/launch.json
@@ -5,23 +5,31 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(lldb) 启动",
+            "name": "g++ build and debug active file",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/${fileBasenameNoExtension}",
+            // "program": "${workspaceFolder}/${fileBasenameNoExtension}",
+            "program": "${fileDirname}/${fileBasenameNoExtension}",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
+            "cwd": "${fileDirname}",
             "environment": [],
             "externalConsole": false,
-			"windows": {
-                "MIMode": "gdb",
-                "miDebuggerPath": "/usr/bin/gdb",
-			},
 			"osx": {
                 "MIMode": "lldb",
-                // "miDebuggerPath": "/usr/local/opt/llvm/bin/lldb",
+                "miDebuggerPath": "/usr/local/opt/llvm/bin/lldb",
 			},
+            "linux": {
+                "MIMode": "gdb",
+                "miDebuggerPath": "/usr/bin/gdb",
+            },
+            "setupCommands": [
+                {
+                  "description": "Enable pretty-printing for gdb",
+                  "text": "-enable-pretty-printing",
+                  "ignoreFailures": true
+                }
+              ],
             // "preLaunchTask": "g++ build active file",
         }
     ]
