--- a/codeforces/.vscode/settings.json
+++ b/codeforces/.vscode/settings.json
@@ -5,7 +5,13 @@
         "random": "cpp",
         "ios": "cpp",
         "ostream": "cpp",
+        "iostream": "cpp",
         "vector": "cpp",
+        "iosfwd": "cpp",
+        "iterator": "cpp",
+        "queue": "cpp",
+        "iomanip": "cpp",
+        "stack": "cpp",
         "utility": "cpp",
         "__bit_reference": "cpp",
         "__config": "cpp",
@@ -53,11 +59,7 @@
         "functional": "cpp",
         "future": "cpp",
         "initializer_list": "cpp",
-        "iomanip": "cpp",
-        "iosfwd": "cpp",
-        "iostream": "cpp",
         "istream": "cpp",
-        "iterator": "cpp",
         "limits": "cpp",
         "locale": "cpp",
         "map": "cpp",
@@ -66,14 +68,12 @@
         "new": "cpp",
         "numeric": "cpp",
         "optional": "cpp",
-        "queue": "cpp",
         "ratio": "cpp",
         "regex": "cpp",
         "scoped_allocator": "cpp",
         "set": "cpp",
         "shared_mutex": "cpp",
         "sstream": "cpp",
-        "stack": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "string": "cpp",
@@ -86,6 +86,9 @@
         "typeinfo": "cpp",
         "unordered_map": "cpp",
         "unordered_set": "cpp",
-        "valarray": "cpp"
-    }
+        "valarray": "cpp",
+        "*.tcc": "cpp",
+        "filesystem": "cpp"
+    },
+    "python.pythonPath": "/home/zhangxj/.pyenv/versions/3.8.8/bin/python"
 }
