--- a/acwing/.vscode/settings.json
+++ b/acwing/.vscode/settings.json
@@ -90,5 +90,5 @@
         "*.tcc": "cpp",
         "filesystem": "cpp"
     },
-    "python.pythonPath": "/home/zhangxj/.pyenv/versions/3.8.8/bin/python"
+    "python.pythonPath": "/home/zhangxj/miniconda3/bin/python"
 }
