--- a/acwing/.vscode/launch.json
+++ b/acwing/.vscode/launch.json
@@ -1,36 +1,43 @@
 {
-    // 使用 IntelliSense 了解相关属性。 
-    // 悬停以查看现有属性的描述。
-    // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
+  // 使用 IntelliSense 了解相关属性。 
+  // 悬停以查看现有属性的描述。
+  // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Python: Current File",
+      "type": "python",
+      "request": "launch",
+      "program": "${file}",
+      "console": "integratedTerminal"
+    },
+    {
+      "name": "g++ build and debug active file",
+      "type": "cppdbg",
+      "request": "launch",
+      // "program": "${workspaceFolder}/${fileBasenameNoExtension}",
+      "program": "${fileDirname}/${fileBasenameNoExtension}",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${fileDirname}",
+      "environment": [],
+      "externalConsole": false,
+      "osx": {
+        "MIMode": "lldb",
+        "miDebuggerPath": "/usr/local/opt/llvm/bin/lldb",
+      },
+      "linux": {
+        "MIMode": "gdb",
+        "miDebuggerPath": "/usr/bin/gdb",
+      },
+      "setupCommands": [
         {
-            "name": "g++ build and debug active file",
-            "type": "cppdbg",
-            "request": "launch",
-            // "program": "${workspaceFolder}/${fileBasenameNoExtension}",
-            "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
-			"osx": {
-                "MIMode": "lldb",
-                "miDebuggerPath": "/usr/local/opt/llvm/bin/lldb",
-			},
-            "linux": {
-                "MIMode": "gdb",
-                "miDebuggerPath": "/usr/bin/gdb",
-            },
-            "setupCommands": [
-                {
-                  "description": "Enable pretty-printing for gdb",
-                  "text": "-enable-pretty-printing",
-                  "ignoreFailures": true
-                }
-              ],
-            // "preLaunchTask": "g++ build active file",
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
         }
-    ]
+      ],
+      // "preLaunchTask": "g++ build active file",
+    }
+  ]
 }
